A bunch more cleanups and extensions, including a pretty big patch from Al Byers much of which has to be manually merged, and in spite of testing there may be some issues still
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5660 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/marketing/config/MarketingUiLabels.properties
+++ b/applications/marketing/config/MarketingUiLabels.properties
@@ -24,6 +24,7 @@ PageTitleEditContactListCommEvent=Edit Contact List Comm Event
 PageTitleEditContactList=Edit Contact List
 PageTitleEditContactListParty=Edit Contact List Party
 PageTitleEditSegmentGroup=Edit Segment Group
+PageTitleFindContactListParty=Find Contact List Parties
 PageTitleFindSegmentGroup=Find Segment Group
 PageTitleListSegmentGroupClass=List Segment Group Classifications
 PageTitleEditSegmentGroupClass=Edit Segment Group Classification
@@ -33,8 +34,11 @@ PageTitleListContactListCommEvent=List Contact List Comm Events
 PageTitleListContactList=List Contact List
 PageTitleListContactListParty=List Contact List Parties
 PageTitleListSegmentGroupRole=List Segment Group Roles
+PageTitleLookupCommEvent=Lookup Communication Event
+PageTitleLookupContactList=Lookup Contact List
 PageTitleEditSegmentGroupRole=Edit Segment Group Role
 PageTitlePreferredContactMech=Preferred Contact Mechanism
+PageTitleFindContactListCommEvents=Find Associated CommEvents
 SegmentGroupSegmentGroup=Segment
 SegmentGroupSegmentGroupType=Type
 SegmentGroupSegmentGroupClassification=Classification
