--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -3,8 +3,12 @@
 #
 ####
 
+PageTitleAddWorkEffort=Create Work Effort
 PageTitleLogin=Login
 PageTitleMain=Main Page
+PageTitleEditWorkEffort=Edit Work Effort
+PageTitleFindWorkEffort=Find Work Effort
+PageTitleListWorkEfforts=List Work Efforts
 
 PartyAddressLine1=Address Line 1
 PartyAddressLine2=Address Line 2
@@ -22,6 +26,8 @@ PartyCountryCode=Country Code
 PartyCreateAdditionalContactInformation=Create additional contact information
 PartyCreateNewContact=Create new contact information
 PartyEditContactInformation=Edit Contact Information
+PartyAddWorkEffort=Add Work Effort
+PartyEditWorkEffort=Edit Work Effort
 PartyEmailAddress=Email Address
 PartyErrorContactInformation=The contact information specified does not belong to you, you may not view or edit it.
 PartyGroupPartyId=Group Party ID
@@ -41,6 +47,7 @@ PartyStateProvince=State/Province
 PartyToName=To Name
 PartyZipPostalCode=Zip/Postal Code
 
+WorkEffort=WorkEffort
 WorkEffortAcceptAssignment=Accept&nbsp;Assignment
 WorkEffortActivityDetail=Activity Detail
 WorkEffortActivityName=Activity Name
@@ -64,11 +71,14 @@ WorkEffortCalendarEventRoles=Calendar Event Roles
 WorkEffortCalendarMonthView=Calendar Month View
 WorkEffortCalendarUpComingEventsView=Calendar Up-Coming Events View
 WorkEffortCalendarWeekView=Calendar Week View
+WorkEffortCommEvents=Communications
 WorkEffortComments=Comments
 WorkEffortCompanyName=OFBiz\: WorkEffort Manager
 WorkEffortCompanySubtitle=Part of the Open For Business Family of Open Source Software
 WorkEffortContactType=Contact Type
 WorkEffortCreated=Created
+WorkEffortCreate=Create Work Effort
+WorkEffortRequestItems=Request Items
 WorkEffortDayView=Day View
 WorkEffortErrorNotFindActivityId=ERROR\: Could not find activity with ID
 WorkEffortErrorNotFindEventId=Error\: Could not find Event with ID
@@ -133,7 +143,10 @@ WorkEffortProjectPhases=ProjectPhases
 WorkEffortProjects=Projects
 WorkEffortProjectStatus=Project Status
 WorkEffortQuantity=Quantity
+WorkEffortQuoteItems=Quote Items
+WorkEffortQuotes=Quotes
 WorkEffortRegisteredUserLogin=Registered User Login
+WorkEffortRequestItems=Request Items
 WorkEffortRequestList=Request List
 WorkEffortRequestManager=Request Manager
 WorkEffortRequestName=Request Name
@@ -170,6 +183,8 @@ WorkEffortUsername=Username
 WorkEffortViewTasksEdit=ViewTasks / Edit
 WorkEffortWeekView=Week View
 WorkEffortWelcome=Welcome
+WorkEffortWorkEffortId=WorkEffort Id
+WorkEffortWorkEffortIdEmpty=WorkEffort Id is empty
 WorkEffortWorkEffortManagerApplication=WorkEffort Manager Application
 WorkEffortWorkEffortManagerMainPage=WorkEffort Manager Main Page
 WorkEffortWorkEffortAssocIdAlreadyExist=WorkEffortAssocId already Exist
