the smallest hotel reservationsite using ofbiz
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5666 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/specialized/opentravelsystem/config/opentravelsystemUiLabels.properties
+++ b/specialized/opentravelsystem/config/opentravelsystemUiLabels.properties
@@ -2,6 +2,7 @@ de=German
 en=English
 fr=French
 opentravelsystemApplication=Open Travel System Main, Introduction
+opentravelsystemAccounting=Accounting
 opentravelsystemCatalog=Categories, Products and Fixed Assets.
 opentravelsystemCategories=Categories
 opentravelsystemCompanyName=Open Travel System
