--- a/specialized/opentravelsystem/build.xml
+++ b/specialized/opentravelsystem/build.xml
@@ -24,7 +24,7 @@
  *  $Id$
 -->
 
-<project name="OFBiz - Open Travel System" default="jar" basedir=".">
+<project name="OFBiz - opentravelsystem Component" default="jar" basedir=".">
 
     <!-- ================================================================== -->
     <!-- Initialization of all property settings                            -->
@@ -32,8 +32,8 @@
 
     <target name="init">                
         <property environment="env"/>
-        <property name="desc" value="Open Travel System"/>
-        <property name="name" value="opentravelsystem"/>
+        <property name="desc" value="opentravelsystem Component"/>
+        <property name="name" value="ofbiz-opentravelsystem"/>
         <property name="src.dir" value="src"/>
         <property name="dtd.dir" value="dtd"/>
         <property name="lib.dir" value="lib"/>        
@@ -42,8 +42,9 @@
     
     <target name="classpath">		        
         <path id="local.class.path">
-            <fileset dir="${lib.dir}" includes="*.jar"/>
+            <!--<fileset dir="${lib.dir}" includes="*.jar"/>-->
             <fileset dir="../../base/lib" includes="*.jar"/>
+            <fileset dir="../../base/lib/commons" includes="*.jar"/>
             <fileset dir="../../base/build/lib" includes="*.jar"/>
             <fileset dir="../../framework/entity/lib" includes="*.jar"/>
             <fileset dir="../../framework/entity/build/lib" includes="*.jar"/>
@@ -51,7 +52,17 @@
             <fileset dir="../../framework/service/lib" includes="*.jar"/>
             <fileset dir="../../framework/service/build/lib" includes="*.jar"/>
             <fileset dir="../../framework/minilang/build/lib" includes="*.jar"/>
+            <fileset dir="../../framework/webapp/lib" includes="*.jar"/>
+            <fileset dir="../../framework/webapp/build/lib" includes="*.jar"/>
+            <fileset dir="../../framework/common/build/lib" includes="*.jar"/>
+            <fileset dir="../../framework/workflow/build/lib" includes="*.jar"/>
+            <fileset dir="../../applications/party/build/lib" includes="*.jar"/>
+            <fileset dir="../../applications/product/build/lib" includes="*.jar"/>
+            <fileset dir="../../applications/order/build/lib" includes="*.jar"/>
+            <fileset dir="../../applications/product/build/lib" includes="*.jar"/>
+            <fileset dir="../../applications/marketing/build/lib" includes="*.jar"/>
             <fileset dir="../../applications/content/build/lib" includes="*.jar"/>
+            <fileset dir="../../specialized/opentravelsystem/build/lib" includes="*.jar"/>
         </path>
     </target>
     
@@ -91,8 +102,9 @@
             </classpath>
             <src path="${src.dir}"/>
         </javac>
+        <!-- also put the DTDs in the jar file... -->
         <copy todir="${build.dir}/classes">
-            <!-- don't put the DTDs in the jar file... -->
+            <!--<fileset dir="${dtd.dir}" includes="*.dtd"/>-->
             <fileset dir="${src.dir}" includes="**/*.properties,**/*.xml,**/*.bsh,**/*.logic,**/*.js,**/*.jacl,**/*.py"/>
         </copy>                	
     </target>
@@ -106,7 +118,7 @@
     <!-- ================================================================== -->
 
     <target name="docs" depends="prepare-docs,classpath">
-        <javadoc packagenames="org.ofbiz.service.*" 
+        <javadoc packagenames="org.ofbiz.opentravelsystem.*" 
                  classpathref="local.class.path"
                  destdir="${build.dir}/javadocs" 
                  Windowtitle="Open for Business - ${desc}">
