Modified label names for actual and estimated times in production run's forms to improve undestandability. Thanks to Si Chen for the suggestions.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5671 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -140,8 +140,8 @@ ManufacturingScrapFactor=Scrap Factor
 ManufacturingStartDate=Start Date
 ManufacturingStartTime=Start Time
 ManufacturingSummarizedPartBreakdown=Summarized Breakdown
-ManufacturingTaskEstimatedMilliSeconds=Run Time
-ManufacturingTaskEstimatedSetupMillis=Setup Time
+ManufacturingTaskEstimatedMilliSeconds=Estimated Run Time
+ManufacturingTaskEstimatedSetupMillis=Estimated Setup Time
 ManufacturingTaskId=Task ID
 ManufacturingTaskName=Routing Task Name
 ManufacturingTaskPurpose=Task Type
@@ -186,8 +186,8 @@ ManufacturingActualCompletionDate=Completion Date
 ManufacturingQuantityToProduce=Qty To Produce
 ManufacturingFromDate=From Date
 ManufacturingToDate=To Date
-ManufacturingAddSetupTime=Add Setup Time
-ManufacturingAddTaskTime=Add Task Time
+ManufacturingAddSetupTime=Add Actual Setup Time
+ManufacturingAddTaskTime=Add Actual Task Time
 ManufacturingAddQuantityProduced=Add Qty Produced
 ManufacturingAddQuantityRejected=Add Qty Rejected
 ManufacturingComments=Comments
