Some order and general i18n/l10n improvements from buxerolles, Jira #OFBIZ-461
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5676 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -230,6 +230,7 @@ OrderTotalDue = Total Due
 OrderTotalOtherOrderAdjustments = Total Other Order Adjustments
 OrderTotalSalesTax = Total Sales Tax
 OrderTotalShippingAndHandling = Total Shipping and Handling
+OrderTrackingCode=Tracking Code
 OrderTrackingNumber = Tracking Number
 OrderUnitList = Unit / List
 OrderUnitPrice = Unit Price
