--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -55,6 +55,7 @@ CommonAnyStore=Any Store
 CommonAnyWebSite=Any Web Site
 CommonApply=Apply
 CommonApril=April
+CommonApproved=Approved
 CommonArea=Area
 CommonAreaCode=Area Code
 CommonAssociate=Associate
@@ -71,6 +72,7 @@ CommonBackToOptions=Back to Options
 CommonBenefit=Benefit
 CommonBy=By
 CommonCancel=Cancel
+CommonCancelled=Cancelled
 CommonCancelAll=Cancel All
 CommonCancelDone=Cancel/Done
 CommonChange=Change
@@ -87,6 +89,7 @@ CommonCloseTab=+
 CommonComingSoon=Coming Soon!
 CommonComment=Comment
 CommonComments=Comments
+CommonCompleted=Completed
 CommonConfiguration=Configuration
 CommonContactMechID=Contact MechI D
 CommonContactPurpose=Contact Purpose
@@ -248,6 +251,7 @@ CommonPermissionError=Permission Error
 CommonPerson=Person
 CommonPrevious=Previous
 CommonPriority=Priority
+CommonProcessing=Processing
 CommonProfile=Profile
 CommonProvince=Province
 CommonPublish=Publish
@@ -292,6 +296,7 @@ CommonSendEmail=send email
 CommonSeptember=September
 CommonSequence=Sequence
 CommonSequenceNum=Sequence Num
+CommonSent=Sent
 CommonSet=Set
 CommonSetNowEmpty=(Will be set to now if empty)
 CommonShow=Show
