A bunch of WorkEffort extensions from Al Byers
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5684 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -6,9 +6,13 @@
 PageTitleAddWorkEffort=Create Work Effort
 PageTitleLogin=Login
 PageTitleMain=Main Page
+PageTitleAddWorkEffort=Add Work Effort
 PageTitleEditWorkEffort=Edit Work Effort
 PageTitleFindWorkEffort=Find Work Effort
 PageTitleListWorkEfforts=List Work Efforts
+PageTitleAddWorkEffortRequest=Add Work Effort Request
+PageTitleEditWorkEffortRequest=Edit Work Effort Request
+PageTitleListWorkEffortRequests=List Work Effort Requests
 
 PartyAddressLine1=Address Line 1
 PartyAddressLine2=Address Line 2
