Testing my commit privilege. Did some testing of the ContactListCommEvent functionality. Probably was not working before.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5685 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/marketing/config/MarketingUiLabels.properties
+++ b/applications/marketing/config/MarketingUiLabels.properties
@@ -7,10 +7,12 @@ MarketingCompanyName=OFBiz: Marketing Manager
 MarketingCompanySubtitle=Part of the Open For Business Family of Open Source Software
 
 ContactList=Contact List
+ContactListCommEventId=Comm Event Id
 ContactListContactListId=Contact List Id
 ContactListCommEventCreate=Create New Contact List Comm Event
 ContactListCreate=Create New Contact List
 ContactListPartyCreate=Create New Contact List Party
+ContactListParty=Contact List Party
 SegmentGroupSegmentGroupId=Segment Group Id
 SegmentGroupSegmentGroupTypeId=Segment Group Type Id
 SegmentGroupDescription=Description
