Improvements to the ui for quote adjustments: users cannot modify automatic adjustments so "Edit" links are shown only for manual adjustments; simplified forms etc.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5690 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -124,6 +124,8 @@ OrderOrderOptionSettings = Order Option Settings
 OrderOrderPurchaseToBeScheduled = Order Purchase To Be Scheluded
 OrderOrderQuote = Quote
 OrderOrderQuoteAdjustments=Adjustments
+OrderOrderQuoteAdjustmentId=Adjustment Id
+OrderOrderQuoteAdjustmentType=Adjustment Type
 OrderOrderQuoteAttributeName = Attribute Name
 OrderOrderQuoteAttributeValue = Attribute Value
 OrderOrderQuoteAttributes = Quote Attributes
