--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -13,6 +13,12 @@ PageTitleListWorkEfforts=List Work Efforts
 PageTitleAddWorkEffortRequest=Add Work Effort Request
 PageTitleEditWorkEffortRequest=Edit Work Effort Request
 PageTitleListWorkEffortRequests=List Work Effort Requests
+PageTitleAddWorkEffortPartyAssign=Add Work Effort PartyAssign
+PageTitleEditWorkEffortPartyAssign=Edit Work Effort PartyAssign
+PageTitleListWorkEffortPartyAssigns=List Work Effort PartyAssigns
+PageTitleAddWorkEffortCommEvent=Add Work Effort CommEvent
+PageTitleEditWorkEffortCommEvent=Edit Work Effort CommEvent
+PageTitleListWorkEffortCommEvents=List Work Effort CommEvents
 
 PartyAddressLine1=Address Line 1
 PartyAddressLine2=Address Line 2
