A bunch of cleanups and a few fixes for the Party ContactList stuff; changed popup to drop-down for preferred contact mech because for a given party there shouldn't be so many of those that a popup is needed, and it is more cumbersome, and in this case what was there wasn't working either
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5702 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -139,8 +139,9 @@ PartyContactEffectiveThru=Effective Thru
 PartyContactExt=ext
 PartyContactInformation=Contact Information
 PartyContactList=Contact List
-PartyContactListPartyCreate=Create New Contact List
+PartyContactListPartyCreate=Add Party to Contact List
 PartyContactMechIdMissing=Contact Mechanism ID is missing
+PartyContactMechType=Contact Mech Type
 PartyContactMechTypeIdMissing=Contact Mech Type ID is missing
 PartyContactMechNotFoundCannotDelete=ERROR: Could not delete contact info (party contact mech not found)
 PartyContactNumber=Contact Number
