A bunch of cleanups and improvements, especially for the customer facing UI and related services, this gets the contact list with double opt-in for email contact lists done, though still working on the email to send out when subscribing to an email contact list in the pending status to give them the opt-in verfiy code and a link in the email they can click on to login and verify their list joining
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5707 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -313,6 +313,7 @@ CommonState=State
 CommonStateProvince=State/Province
 CommonStats=Stats
 CommonStatus=Status
+CommonStatusHistory=Status History
 CommonSubTitle=Sub Title
 CommonSubTotal=Sub Total
 CommonSubmit=Submit
