added create new employee and create new prospect wizard interfaces
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5718 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -1,5 +1,5 @@
 ###
-# OFBiz UiLabel Properties used for the party component 
+# OFBiz UiLabel Properties used for the party component
 #
 
 AccountingBillingAccount=Billing Accounts
@@ -14,7 +14,7 @@ AccountingGiftCard=Gift Card
 AccountingPinNumber=Pin Number
 AccountingPaymentsReceived=Payments Received
 AccountingPaymentsSent=Payments Sent
- 
+
 contactmechservices.could_not_create_contact_info_id_generation_failure=ERROR: Could not create contact info (id generation failure).
 contactmechservices.service_createContactMech_not_be_used_for_POSTAL_ADDRESS=This service (createContactMech) should not be used for POSTAL_ADDRESS type ContactMechs, use the createPostalAddress service.
 contactmechservices.service_createContactMech_not_be_used_for_TELECOM_NUMBER=This service (createContactMech) should not be used for TELECOM_NUMBER type ContactMechs, use the createTelecomNumber service.
@@ -118,13 +118,13 @@ PartyChangeParty=Change Party
 PartyCity=City
 PartyCityMissing=City is missing
 PartyClassifications=Classifications
-PartyClassificationGroupId=Classification Group Id 
-PartyClassificationGroups=Classification Groups 
-PartyClassificationGroup=Classification Group 
+PartyClassificationGroupId=Classification Group Id
+PartyClassificationGroups=Classification Groups
+PartyClassificationGroup=Classification Group
 PartyClassificationGroupParties=Classification Group Parties
 PartyClient=Client
 PartyClientIP=Client IP
-PartyClientUser=Client User 
+PartyClientUser=Client User
 PartyComments=Comments
 PartyCommEvent=Comm Event
 PartyCommEvents=Comm Events
@@ -155,7 +155,7 @@ PartyCookie=Cookie
 PartyCountryCode=Country Code
 PartyCountryMissing=Country is missing
 PartyCreateAddWebSiteRolePermissionError=Security Error\: to run addWebSiteRole you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
-PartyCreateCommunicationEventPermissionError=Security Error\: to run createCommunicationEvent you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission 
+PartyCreateCommunicationEventPermissionError=Security Error\: to run createCommunicationEvent you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreateCommunicationEventPurposePermissionError=Security Error\: to run createCommunicationEventPurpose you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreateCommunicationEventRolePermissionError=Security Error\: to run createCommunicationEventRole you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreatePartyClassificationGroupPermissionError=Security Error\: to run createPartyClassificationGroup you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
@@ -169,9 +169,10 @@ PartyCreateNewEmployee=Create Employee
 PartyCreateNewParty=Create New Party Detail
 PartyCreateNewPartyGroup=Create New Party Group
 PartyCreateNewPerson=Create New Person
+PartyCreateNewProspect=Create Prospect
 PartyCreateNewSecurityGroup=Create New SecurityGroup
 PartyCreateUserLogin=Create UserLogin
-PartyCurrentShoppingCart=Current Shopping Cart 
+PartyCurrentShoppingCart=Current Shopping Cart
 PartyCustomerRequest=Customer Request
 PartyCybersourceAvsOver=Cybersource AVS Override
 PartyDeleteVendorPermissionError=Security Error\: to run deleteVendor you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
@@ -198,7 +199,7 @@ PartyFindParties=Find Parties
 PartyFindParty=Find Party
 PartyFirstName=First Name
 PartyFirstNameMissing=Firstname is Missing
-PartyFollowSession=Follow Session 
+PartyFollowSession=Follow Session
 PartyGender=Gender
 PartyGotoList=Goto List
 PartyGroupName=Group Name
@@ -215,7 +216,7 @@ PartyInitialRequest=Initial Request
 PartyInitialUserAgent=Initial User Agent
 PartyLastName=Last Name
 PartyLastNameMissingError=Lastname is Missing
-PartyLastVisit=Last Visit(s)  
+PartyLastVisit=Last Visit(s)
 PartyListCommunicationEvents=Found Communication Events
 PartyListCommCustRequest=Found Communication Customer Requests
 PartyListCommPurpose=Found Communication Work Purposes
@@ -302,7 +303,7 @@ PartyPhoneNumber=Phone Number
 PartyPostal=Postal
 PartyPostalCodeMissing=Zip/Postal Code is missing
 PartyPurposeTypeMissingCannotAdd=Purpose type not specified, cannot add purpose to contact mechanism
-PartyPurposeTypeMissingCannotRemove=Purpose type not specified, cannot remove purpose from contact mechanism 
+PartyPurposeTypeMissingCannotRemove=Purpose type not specified, cannot remove purpose from contact mechanism
 PartyPurposeTypeNotFound=Purpose Type not found with ID
 PartyPushURL=Push URL
 PartyPrice=Price
@@ -341,7 +342,7 @@ PartySegmentGroupProductStoreId=Product Store Id
 PartySegments=Segments
 PartySelectContactType=Select Contact Type
 PartySelectcRoleForParty=Select role(s) for this party
-PartySequenceId=Sequence Id 
+PartySequenceId=Sequence Id
 PartyServer=Server
 PartyServiceNotForPostalAddress=This service (createContactMech) should not be used for POSTAL_ADDRESS type ContactMechs, use the createPostalAddress service
 PartyServiceNotForTelecomNumber=This service (createContactMech) should not be used for TELECOM_NUMBER type ContactMechs, use the createTelecomNumber service
@@ -384,7 +385,7 @@ PartyUserCreated=User Created
 PartyUserLogin=User Login
 PartyUserLogins=User Logins
 PartyUserLoginId=User Login Id
-PartyUserLoginsForSecurityGroup=UserLogins for SecurityGroup with ID 
+PartyUserLoginsForSecurityGroup=UserLogins for SecurityGroup with ID
 PartyUserName=User Name(s)
 PartyUserNameMissing=Username is missing
 PartyVendor=Vendor
