added display of backorder information on order view
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5721 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -69,6 +69,7 @@ OrderInvoices = Invoices
 OrderIsThisGift = Is This a Gift?
 OrderIssuedToShipmentItem = Issued to Shipment Item
 OrderItemTotal = Item Total
+OrderItemsBackOrdered = Items Backordered
 OrderItemsOrdered = Items Ordered
 OrderItemsReturned = Items Returned
 OrderItemsSubTotal = Items SubTotal
@@ -308,5 +309,5 @@ shoppinglistevents.shoppingListId_is_required_parameter = shoppingListId is a re
 OrderSendConfirmationEmail        = Send a confirmation email
 OrderSendConfirmationEmailSendTo  = Send To
 OrderSendConfirmationEmailCCTo    = CC To
-OrderSendConfirmationEmailSubject = Subject 
+OrderSendConfirmationEmailSubject = Subject
 OrderSendConfirmationEmailNote    = Note
