A number of cleanups in style and such done while review the code
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5738 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/ecommerce/config/EcommerceUiLabels.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels.properties
@@ -208,7 +208,7 @@ EcommercePointsFrom=points from
 EcommercePostAnonymous=Post Anonymous
 EcommercePrice=Price
 EcommerceProduct=Product
-EcommerceProductNumber=Product; Number:
+EcommerceProductNumber=Product ID:
 EcommerceProductsForPromotion=Products For Promotion
 EcommercePromotion=Promotion
 EcommercePromotionDetails=Promotion Details
