Adding WorkEffort Requirement screens.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5742 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -10,15 +10,27 @@ PageTitleAddWorkEffort=Add Work Effort
 PageTitleEditWorkEffort=Edit Work Effort
 PageTitleFindWorkEffort=Find Work Effort
 PageTitleListWorkEfforts=List Work Efforts
-PageTitleAddWorkEffortRequest=Add Work Effort Request
-PageTitleEditWorkEffortRequest=Edit Work Effort Request
-PageTitleListWorkEffortRequests=List Work Effort Requests
-PageTitleAddWorkEffortPartyAssign=Add Work Effort PartyAssign
-PageTitleEditWorkEffortPartyAssign=Edit Work Effort PartyAssign
-PageTitleListWorkEffortPartyAssigns=List Work Effort PartyAssigns
 PageTitleAddWorkEffortCommEvent=Add Work Effort CommEvent
 PageTitleEditWorkEffortCommEvent=Edit Work Effort CommEvent
 PageTitleListWorkEffortCommEvents=List Work Effort CommEvents
+PageTitleAddWorkEffortPartyAssign=Add Work Effort PartyAssign
+PageTitleEditWorkEffortPartyAssign=Edit Work Effort PartyAssign
+PageTitleListWorkEffortPartyAssigns=List Work Effort PartyAssigns
+PageTitleAddWorkEffortQuote=Add Work Effort Quote
+PageTitleEditWorkEffortQuote=Edit Work Effort Quote
+PageTitleListWorkEffortQuotes=List Work Effort Quotes
+PageTitleAddWorkEffortQuoteItem=Add Work Effort QuoteItem
+PageTitleEditWorkEffortQuoteItem=Edit Work Effort QuoteItem
+PageTitleListWorkEffortQuoteItems=List Work Effort QuoteItems
+PageTitleAddWorkEffortRequest=Add Work Effort Request
+PageTitleEditWorkEffortRequest=Edit Work Effort Request
+PageTitleListWorkEffortRequests=List Work Effort Requests
+PageTitleAddWorkEffortRequestItem=Add Work Effort RequestItem
+PageTitleEditWorkEffortRequestItem=Edit Work Effort RequestItem
+PageTitleListWorkEffortRequestItems=List Work Effort RequestItems
+PageTitleAddWorkEffortRequirement=Add Work Effort Requirement
+PageTitleEditWorkEffortRequirement=Edit Work Effort Requirement
+PageTitleListWorkEffortRequirements=List Work Effort Requirements
 
 PartyAddressLine1=Address Line 1
 PartyAddressLine2=Address Line 2
