Added ShoppingList screens to workeffort. Put some ShoppingList forms and ShoppingList lookup into order.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5747 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -145,6 +145,7 @@ WorkEffortNoRequestFound=No Request Found
 WorkEffortNoRequirementsCreated=No Requirements Created
 WorkEffortNoTasksAssociatedRequirement=No Tasks currently associated with this Requirement
 WorkEffortNotes=Notes
+WorkEffortOrderHeaders=Orders
 WorkEffortOrganizer=Organizer
 WorkEffortOpenApplication=WorkEffortOpenApplication
 WorkEffortOpenPageInNewWindow=Open Page In New Window
@@ -187,6 +188,7 @@ WorkEffortResultOfLookup=Result Of Lookup
 WorkEffortRevision=Revision
 WorkEffortSelected=Selected
 WorkEffortSelectContactMechanism=Select an existing contact mechanism
+WorkEffortShopLists=Shop Lists
 WorkEffortShowActive=Show Active
 WorkEffortShowAllNotes=Show All Notes
 WorkEffortShowThisItemsNotes=Show This Item's Notes
