Adding workeffort screens to order.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5753 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -153,6 +153,7 @@ OrderOrderQuoteTypeId = Quote Type Id
 OrderOrderQuoteUnitPrice = Quote Unit Price
 OrderOrderQuoteViewRequest = View Request
 OrderOrderQuoteWorkEffortId = QuoteWorkEffortId
+OrderOrderQuoteWorkEfforts = WorkEfforts
 OrderOrderQuotes = Quotes
 OrderOrderQuoteuomId = Quote Uom Id
 OrderOrderReturn = Return
