added missing properties
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5755 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/securityext/config/truition.properties
+++ b/applications/securityext/config/truition.properties
@@ -12,8 +12,15 @@ truition.cookie.name=truition_cookie
 # Domain Name used by the cookie
 truition.domain.name=ofbiz.org
 
+# Cookie Path
+truition.cookie.path=/
+
+# Cookie Lifespan (in seconds)
+truition.cookie.time=-1
+
 # SiteID provided by Truition
 truition.siteId=XXXX
 
 # Redirect URL for Login/Register
 truition.redirect.urlName=NURL
+
