Adding Related Summary screens. Created 5 views.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5763 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -30,7 +30,9 @@ PageTitleEditWorkEffortRequestItem=Edit Work Effort RequestItem
 PageTitleListWorkEffortRequestItems=List Work Effort RequestItems
 PageTitleAddWorkEffortRequirement=Add Work Effort Requirement
 PageTitleEditWorkEffortRequirement=Edit Work Effort Requirement
-PageTitleListWorkEffortRequirements=List Work Effort Requirements
+PageTitleListWorkEffortRequirements=List Work Effort Requirement
+PageTitleWorkEffortRelatedSummary=Work Effort Related Summary
+
 
 PartyAddressLine1=Address Line 1
 PartyAddressLine2=Address Line 2
@@ -168,6 +170,7 @@ WorkEffortProjectStatus=Project Status
 WorkEffortQuantity=Quantity
 WorkEffortQuoteItems=Quote Items
 WorkEffortQuotes=Quotes
+WorkEffortRelatedSummary=Related Summary
 WorkEffortRegisteredUserLogin=Registered User Login
 WorkEffortRequestItems=Request Items
 WorkEffortRequestList=Request List
