Implemented creation of a quote from a cart. This includes: - new xml service: "createQuoteFromCart" - new event "createQuoteFromCart" that prepares the cart and invokes the service - new link in the order entry left column to run the event/service This commits includes also a few minor clean-ups and improvements to the quote stuff.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5766 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -23,7 +23,7 @@ OrderAdjustment = Adjustment
 OrderAdjustments = Adjustments
 OrderAllowSplit = Allow Split
 OrderApproveOrder = Approve Order
-OrderAutoCreateQuoteAdjustments=Auto Create Adjustments
+OrderRunStorePromotions=Run Store Promotions
 OrderBeSureIncludeOrder = Be sure to include your order
 OrderCancelAllItems = Cancel all Items
 OrderCancelled = Cancelled
@@ -39,11 +39,12 @@ OrderCreateNewReturn = Create new return
 OrderCreateOrder = Create Order
 OrderCreateOrderQuote = Create New Quote
 OrderCreateOrderQuoteAdjustment=Create Manual Adjustment
-OrderCreateOrderQuoteAttribute = Create New Quote Attribute
-OrderCreateOrderQuoteCoefficient = Create New Quote Coefficient
+OrderCreateOrderQuoteAttribute = Create New Attribute
+OrderCreateOrderQuoteCoefficient = Create New Coefficient
 OrderCreateReturn=Create return
 OrderCreateOrderQuoteItem = Create New Quote Item
 OrderCreateOrderQuoteRole = Create New Quote Role
+OrderCreateQuoteFromCart=Create Quote From Cart
 OrderCreateReturn = Create return
 OrderCreatedBy = Created by
 OrderCurrentStatus = Current Status
