--- a/.classpath
+++ b/.classpath
@@ -53,7 +53,6 @@
 	<classpathentry kind="lib" path="base/lib/commons/commons-logging.jar"/>
 	<classpathentry kind="lib" path="base/lib/commons/commons-el.jar"/>
 	<classpathentry kind="lib" path="base/lib/commons/commons-discovery.jar"/>
-	<classpathentry kind="lib" path="base/lib/commons/commons-digester.jar"/>
 	<classpathentry kind="lib" path="base/lib/commons/commons-dbcp.jar"/>
 	<classpathentry kind="lib" path="base/lib/commons/commons-collections.jar"/>
 	<classpathentry kind="lib" path="base/lib/commons/commons-cli.jar"/>
@@ -76,8 +75,6 @@
 	<classpathentry kind="lib" path="framework/webapp/lib/velocity-1.3.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/MinML2.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/JPublish.jar"/>
-	<classpathentry kind="lib" path="framework/webapp/lib/jasperreports-applet.jar"/>
-	<classpathentry kind="lib" path="framework/webapp/lib/jasperreports.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/iTextXML.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/iText.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/fop.jar"/>
@@ -158,5 +155,8 @@
 	<classpathentry kind="lib" path="base/lib/scripting/jython-nooro.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/barcode4j-fop-ext-0.20.5-complete.jar"/>
 	<classpathentry kind="lib" path="base/lib/icu4j_3_4.jar"/>
+	<classpathentry kind="lib" path="base/lib/commons/commons-digester-1.7.jar"/>
+	<classpathentry kind="lib" path="framework/webapp/lib/jasperreports-1.0.2-applet.jar"/>
+	<classpathentry kind="lib" path="framework/webapp/lib/jasperreports-1.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
