Some clean up on the WorkEffort screens.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5806 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -10,6 +10,7 @@ PageTitleAddWorkEffort=Add Work Effort
 PageTitleEditWorkEffort=Edit Work Effort
 PageTitleFindWorkEffort=Find Work Effort
 PageTitleListWorkEfforts=List Work Efforts
+PageTitleTreeWorkEfforts=Child Work Efforts
 PageTitleAddWorkEffortCommEvent=Add Work Effort CommEvent
 PageTitleEditWorkEffortCommEvent=Edit Work Effort CommEvent
 PageTitleListWorkEffortCommEvents=List Work Effort CommEvents
@@ -95,6 +96,7 @@ WorkEffortCalendarEventRoles=Calendar Event Roles
 WorkEffortCalendarMonthView=Calendar Month View
 WorkEffortCalendarUpComingEventsView=Calendar Up-Coming Events View
 WorkEffortCalendarWeekView=Calendar Week View
+WorkEffortChildren=Children
 WorkEffortCommEvents=Communications
 WorkEffortComments=Comments
 WorkEffortCompanyName=OFBiz\: WorkEffort Manager
