--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -3,12 +3,14 @@
 # ========================================
 #{Calendar} message
 FacilityBillingAddressSameShipping = Billing address is the same as the shipping address
+FacilityDeliveryOrder=Delivery order
 FacilityFacility = Facility
 FacilityInventory = Inventory
 FacilityNoFacility = No Facility
 FacilityNoOtherShippingMethods = Use Default: No other shipping methods available.
 FacilityShipAvailable = Please ship items I ordered as they become available (you may incur additional shipping charges).
 FacilityShipOnceOrAvailable = Ship all at once, or 'as available'?
+FacilityShipmentDatas=Shipment Data
 FacilityShipments = Shipments
 FacilityShipping = Shipping
 FacilityShippingAndHandling = Shipping and Handling
@@ -22,29 +24,31 @@ OrderAddOrderToShoppingList = Add Order Items to Shopping List
 OrderAdjustment = Adjustment
 OrderAdjustments = Adjustments
 OrderAllowSplit = Allow Split
+OrderAmount=Amount
+OrderApproved=Approved
 OrderApproveOrder = Approve Order
-OrderRunStorePromotions=Run Store Promotions
+OrderAutoCreateQuoteAdjustments=Auto Create Adjustments
 OrderBeSureIncludeOrder = Be sure to include your order
 OrderCancelAllItems = Cancel all Items
 OrderCancelled = Cancelled
 OrderCannotBeChanged = (cannot be changed without clearing order.)
 OrderCartTotal = Cart Total
+OrderChooseFacilityDifferentDefault = You may choose a facility instead of the default one
 OrderChooseFollowingForGift = You may also choose one of the following for your gift
 OrderClearOrder = Clear Order
 OrderCompanyName = OFBiz: Order Manager
 OrderCompanySubtitle = Part of the Open For Business Family of Open Source Software
+OrderCompleted=Completed
 OrderCompleteOrder = Complete Order
 OrderContactInformation = Contact Information
 OrderCreateNewReturn = Create new return
 OrderCreateOrder = Create Order
 OrderCreateOrderQuote = Create New Quote
 OrderCreateOrderQuoteAdjustment=Create Manual Adjustment
-OrderCreateOrderQuoteAttribute = Create New Attribute
-OrderCreateOrderQuoteCoefficient = Create New Coefficient
-OrderCreateReturn=Create return
+OrderCreateOrderQuoteAttribute = Create New Quote Attribute
+OrderCreateOrderQuoteCoefficient = Create New Quote Coefficient
 OrderCreateOrderQuoteItem = Create New Quote Item
 OrderCreateOrderQuoteRole = Create New Quote Role
-OrderCreateQuoteFromCart=Create Quote From Cart
 OrderCreateReturn = Create return
 OrderCreatedBy = Created by
 OrderCurrentStatus = Current Status
@@ -55,6 +59,7 @@ OrderDesiredDeliveryDate = Desired Delivery Date
 OrderDestination = Destination
 OrderEditItems = Edit Items
 OrderEntryDate = Entry Date
+OrderErrorFacilityHaveNoAdress=Error : the facility does not have addresses
 OrderFinalizeOrder = Finalize Order
 OrderFindOrder = Find Orders
 OrderFindReturn = Find Returns
@@ -62,26 +67,35 @@ OrderGift = Gift?
 OrderGiftMessage = Gift Message
 OrderGiftWrapAllItems = Gift Wrap All Items?
 OrderGrandTotal = Grand Total
+OrderGrossDollarAmountsIncludesAdjustmentsAndPendingOrders=Gross Dollar Amounts (includes adjustments and pending orders)
+OrderGrossItemsSoldIncludesPromotionsAndPendingOrders=Gross Items Sold (includes promotions and pending orders)
 OrderImage = Image
 OrderInProgress = In Progress
+OrderInputQuickPurchaseOrder=Purchase Order Quick Entry
 OrderInternalNote = Internal Note
 OrderInternalNoteMessage = If yes is selected, this note doesn't appear on the print documents
 OrderInvoices = Invoices
 OrderIsThisGift = Is This a Gift?
 OrderIssuedToShipmentItem = Issued to Shipment Item
 OrderItemTotal = Item Total
-OrderItemsBackOrdered = Items Backordered
 OrderItemsOrdered = Items Ordered
 OrderItemsReturned = Items Returned
 OrderItemsSubTotal = Items SubTotal
 OrderJurisdiction = Jurisdiction
 OrderLookupOrder = Lookup Order(s)
 OrderLookupReturn = Lookup Return(s)
+OrderManagerApplication = Order Manager Application
+OrderMTD=MTD
 OrderNbr = #
+OrderNewQuantity=New quantity
 OrderNewQuote = New quote
+OrderNewQuoteAttribute = New Quote Attribute
+OrderNewQuoteItem = New Quote Item
+OrderNewReceipt = New Receipt
 OrderNewRequest = New Request
 OrderNewRequestItem = New Request Item
 OrderNewRequirement = New Requirement
+OrderNewShipment = New Shipment
 OrderNewShipmentForShipGroup = New Shipment For Ship Group
 OrderNoChannel = No Channel
 OrderNoGiftWrap = No Gift Wrap
@@ -93,7 +107,7 @@ OrderNoRequestFound = No Request Found
 OrderNoReturnFound = No return found.
 OrderNoReturnFoundWithId = No return found with return ID
 OrderNoRolesAssociatedRequest = No Roles Associated With This Customer Request
-OrderNotPrintableNote=Internal Note (Not Printed)
+OrderNotPrintableNote = Internal Note (Not Printed)
 OrderNotShipped = Not Shipped
 OrderNotUsedForPurchase = Not Used For Purchase Orders
 OrderNotUsedForSales = Not Used For Sales Orders
@@ -107,6 +121,7 @@ OrderOrderBillFromParty = Bill From Party
 OrderOrderBillToParty = Bill To Party
 OrderOrderConfirmation = Order Confirmation
 OrderOrderDate = Order Date
+OrderOrdered=Ordered
 OrderOrderEntry = Order Entry
 OrderOrderEntryCustomerInfo = Order Entry Customer Info
 OrderOrderEntryOrderTerms = Order Entry Order Terms
@@ -126,8 +141,6 @@ OrderOrderOptionSettings = Order Option Settings
 OrderOrderPurchaseToBeScheduled = Order Purchase To Be Scheluded
 OrderOrderQuote = Quote
 OrderOrderQuoteAdjustments=Adjustments
-OrderOrderQuoteAdjustmentId=Adjustment Id
-OrderOrderQuoteAdjustmentType=Adjustment Type
 OrderOrderQuoteAttributeName = Attribute Name
 OrderOrderQuoteAttributeValue = Attribute Value
 OrderOrderQuoteAttributes = Quote Attributes
@@ -154,12 +167,15 @@ OrderOrderQuoteTypeId = Quote Type Id
 OrderOrderQuoteUnitPrice = Quote Unit Price
 OrderOrderQuoteViewRequest = View Request
 OrderOrderQuoteWorkEffortId = QuoteWorkEffortId
-OrderOrderQuoteWorkEfforts = WorkEfforts
 OrderOrderQuotes = Quotes
 OrderOrderQuoteuomId = Quote Uom Id
 OrderOrderReturn = Return
 OrderOrderReturns = Returns
+OrderOrdersItemCounts=Orders Item Counts
 OrderOrderShortcuts = Shortcuts
+OrderOrdersPending=Orders Pending
+OrderOrderStatisticsPage=Order Statistics Page
+OrderOrdersTotals=Orders Totals
 OrderOrderTasks = Order Tasks
 OrderOrderTermDays = Term Days
 OrderOrderTermType = Term Type
@@ -169,18 +185,33 @@ OrderOrderTotal = Order Total
 OrderOrderType = Order Type
 OrderOrdered = Ordered
 OrderOriginFacility = Origin Facility
+OrderOverridePrice=Override Price
 OrderPONumber = PO Number
+OrderPaidDollarAmountsIncludesAdjustments=Paid Dollar Amounts (includes adjustments)
+OrderPaidItemsSoldIncludesPromotions=Paid Items Sold (includes promotions)
 OrderPaymentOfflineCheckMoney = Offline Payment: Check/Money Order
+OrderPaymentType=Payment Type
+OrderPendingPaymentDollarAmountsIncludesAdjustments=Pending Payment Dollar Amounts (includes adjustments)
+OrderPendingPaymentItemsSoldIncludesPromotions=Pending Payment Items Sold (includes promotions)
+OrderPlannedInReceive=Received quantity
+OrderPlannedRejected=Rejected quantity
 OrderPrice = Price
-OrderPrintableNote=Public Note (Printed)
+OrderPrintableNote = Public Note (Printed)
 OrderProductStore = Product Store
 OrderPromotionCouponCodes = Promotion/Coupon Codes
 OrderPurchaseOrder = Purchase Order
 OrderQuantity = Quantity
+OrderQuantityUom = Unity of measure
+OrderQuickAddOrderItem=Order Item Quick Add
 OrderQuickRefundEntireOrder = Quick Refund Entire Order
 OrderQuickShipEntireOrder = Quick Ship Entire Order
 OrderRecalculateOrder = Recalculate Order
+OrderReceiptInformation=Receipt Information
+OrderReceivedInOtherReceive=On Other Delivery Order
+OrderReceiveOfflinePayments=Receive Offline Payment(s)
 OrderReceiveReturn = Receive Return
+OrderReference=Reference
+OrderRejected=Rejected
 OrderRemaining = Remaining
 OrderRemainingSubTotal = Remaining SubTotal
 OrderRequest = Request
@@ -211,6 +242,7 @@ OrderReviewOrder = Review Order
 OrderSalesChannel = Sales Channel
 OrderSalesOrder = Sales Order
 OrderSalesTax = Sales Tax
+OrderStatusChanges=Status Changes
 OrderScheduleDelivery = Schedule Delivery
 OrderSelectAgreement = Select an agreement for this order
 OrderSelectCurrency = Or set a currency for this order
@@ -227,12 +259,20 @@ OrderShowThisItemsNotes = Show This Item's Notes
 OrderSplittingPreference = Splitting Preference
 OrderStartDateTime = Start Date/Time
 OrderStatusHistory = Status History
+OrderStockEventPlanned = Stock event planned
 OrderSubTotal = Sub.Total
+OrderSupplierData=Supplier Data
+OrderSupplierFinancialData=Supplier Financial Data
 OrderSurvey = Survey
 OrderThisOrderGift = This order is a gift
 OrderThisOrderNotGift = This order is not a gift
 OrderTotalDue = Total Due
 OrderTotalOtherOrderAdjustments = Total Other Order Adjustments
+OrderTotalQuantityAccepted= Total quantity accepted
+OrderTotalQuantityRejected = Total quantity rejected
+OrderTotalQuantityReceive = Total quantity received
+OrderTotalQuantityOrdered = Total quantity ordered
+OrderTotalQuantityNotReceived = Total quantity not received
 OrderTotalSalesTax = Total Sales Tax
 OrderTotalShippingAndHandling = Total Shipping and Handling
 OrderTrackingCode=Tracking Code
@@ -247,69 +287,74 @@ OrderViewEditDeliveryScheduleInfo = View/Edit Delivery Schedule Info
 OrderViewImage = View Image
 OrderViewOrder = View Order
 OrderViewPermissionError = You do not have permission to view this page.
+OrderWaitingApproval=Waiting Approval
+OrderWaitingCompletion=Waiting Completion
+OrderWaitingPayment=Waiting Payment
+OrderWTD=WTD
 OrderWorkflow = Workflow
+OrderYTD=YTD
 PageTitleLogin = Login
 calendar_click_here_for_calendar = Click here For Calendar
 cart.addToCart.noProductInfoPassed = No product information passed, not adding anything to cart.
 cart.addToCart.productConfigurationIsNotValid = Configuration Is Not Valid
-cart.add_category_defaults         = Added ${totalQuantity} items to the cart.
+cart.add_category_defaults = Added ${totalQuantity} items to the cart.
 cart.agreement_not_specified_to_add_from = No agreement specified to add from.
 cart.category_not_specified_to_add_from = No category specified to add from.
 cart.could_not_add_product_to_cart = Could NOT add product ${productId} to cart.
-cart.could_not_get_agreement       = Could not get agreement through ${agreementId} {read error}: ${message}.
+cart.could_not_get_agreement = Could not get agreement through ${agreementId} {read error}: ${message}.
 cart.could_not_get_products_in_category = Could not get products in category ${categorieId} to add to cart {read error}.
 cart.could_not_get_products_in_category_cart = Could not get products in category ${categorieId} to add to cart {read error}: ${message}.
 cart.order_not_specified_to_add_from = No order specified to add from
-cart.price_not_positive_number     = Price must be a positive number
+cart.price_not_positive_number = Price must be a positive number
 cart.product_not_valid_for_supplier = This product cannot be purchased from the chosen supplier for the given quantity and currency.
-cart.quantity_not_positive_number  = Quantity must be a positive number
+cart.quantity_not_positive_number = Quantity must be a positive number
 checkevents.cannot_cancel_item = Cannot cancel item at this time; please try again.
-checkevents.cart_empty         = Cart is empty.
+checkevents.cart_empty = Cart is empty.
 checkevents.insufficient_credit_available_on_account = Insufficient credit available on accounts.
 checkevents.invalid_amount_set_for_billing_account = Invalid amount set for Billing Account #${billingAccountId}.
 checkevents.invalid_amount_set_for_payment_method = Invalid amount set for Payment method.
 checkevents.not_enough_available_on_account = Not enough available on account #{billingAccountId}.
 checkevents.payment_not_cover_this_order = Selected payment methods will not cover this order.
 checkhelper.could_not_create_order_invoking_service = ERROR: Could not create order (problem invoking the service: ${service})
-checkhelper.could_not_create_order_parsing_totals   = ERROR: Could not create order (problem parsing order totals).
-checkhelper.database_error                          = Database error.
+checkhelper.could_not_create_order_parsing_totals = ERROR: Could not create order (problem parsing order totals).
+checkhelper.database_error = Database error.
 checkhelper.did_not_complete_order_following_occurred = Did not complete the order, the following occurred:
-checkhelper.enter_amount_to_place_on_gift_card      = Please enter the amount to place on your gift card.
-checkhelper.enter_gift_card_number                  = Please enter your gift card number.
-checkhelper.enter_gift_card_pin_number              = Please enter your gift card pin number.
-checkhelper.enter_shipping_address                  = Please enter a shipping address.
+checkhelper.enter_amount_to_place_on_gift_card = Please enter the amount to place on your gift card.
+checkhelper.enter_gift_card_number = Please enter your gift card number.
+checkhelper.enter_gift_card_pin_number = Please enter your gift card pin number.
+checkhelper.enter_shipping_address = Please enter a shipping address.
 checkhelper.insufficient_credit_available_on_account = Insufficient credit available on account.
-checkhelper.invalid_amount_for_gift_card            = Invalid amount for gift card entered.
-checkhelper.no_items_in_cart                        = There are no items in the cart.
-checkhelper.problem_with_gift_card_information      = Problem with gift card information.
-checkhelper.problems_getting_order_header           = Problems getting order header. Cannot check external gateways!
-checkhelper.problems_getting_payment_preference     = Problems getting payment preference. Cannot check external gateways!
-checkhelper.problems_parsing_amount                 = Problems parsing amount.
-checkhelper.problems_reading_database               = Problems reading the database, please try again.
-checkhelper.select_method_of_payment                = Please select a method of payment.
-checkhelper.select_shipping_destination             = Please Select a Shipping Destination.
-checkhelper.select_shipping_method                  = Please Select a Shipping Method.
-checkhelper.select_splitting_preference             = Please Select a Splitting Preference.
-checkhelper.specify_if_order_is_gift                = Please Specify Whether or Not This Order is a Gift.
-checkhelper.specify_if_shipAfterDate_is_date        = Please specify ship after date as a date.
-checkhelper.specify_if_shipBeforeDate_is_date       = Please specify a ship before date as a date.
-checkhelper.totals_do_not_match_order_total         = Totals do not match order total.
+checkhelper.invalid_amount_for_gift_card = Invalid amount for gift card entered.
+checkhelper.no_items_in_cart = There are no items in the cart.
+checkhelper.problem_with_gift_card_information = Problem with gift card information.
+checkhelper.problems_getting_order_header = Problems getting order header. Cannot check external gateways!
+checkhelper.problems_getting_payment_preference = Problems getting payment preference. Cannot check external gateways!
+checkhelper.problems_parsing_amount = Problems parsing amount.
+checkhelper.problems_reading_database = Problems reading the database, please try again.
+checkhelper.select_method_of_payment = Please select a method of payment.
+checkhelper.select_shipping_destination = Please Select a Shipping Destination.
+checkhelper.select_shipping_method = Please Select a Shipping Method.
+checkhelper.select_splitting_preference = Please Select a Splitting Preference.
+checkhelper.specify_if_order_is_gift = Please Specify Whether or Not This Order is a Gift.
+checkhelper.specify_if_shipAfterDate_is_date = Please specify ship after date as a date.
+checkhelper.specify_if_shipBeforeDate_is_date = Please specify a ship before date as a date.
+checkhelper.totals_do_not_match_order_total = Totals do not match order total.
 checkhelper_sales_order_lines_lookup_failed = ERROR: Sales Order Lines lookup failed.
 checkhelpertotalsdonotmatchordertotal = Totals do not match order total.
 help_also_interested_in = You might also be interested in :
 item.product_not_found = Product not found, not adding to cart. [productId: ${productId}]
 shoppinglistevents.added_product_to_cart = Added product ${productId} to cart.
 shoppinglistevents.cannot_create_new_shopping_list = Cannot create new shopping list.
-shoppinglistevents.choose_shopping_list  = Please choose a shopping list.
+shoppinglistevents.choose_shopping_list = Please choose a shopping list.
 shoppinglistevents.error_adding_item_to_shopping_list = Error adding item to shopping list.
 shoppinglistevents.error_getting_shopping_list_and_items = Error getting shopping list and items.
-shoppinglistevents.no_items_added        = No items were added.
+shoppinglistevents.no_items_added = No items were added.
 shoppinglistevents.problem_adding_product_to_cart = Could NOT add product ${productId} to cart.
 shoppinglistevents.select_items_to_add_to_list = Please select item(s) to add to the shopping list.
 shoppinglistevents.shoppingListId_is_required_parameter = shoppingListId is a required parameter.
 
-OrderSendConfirmationEmail        = Send a confirmation email
-OrderSendConfirmationEmailSendTo  = Send To
-OrderSendConfirmationEmailCCTo    = CC To
-OrderSendConfirmationEmailSubject = Subject
-OrderSendConfirmationEmailNote    = Note
+OrderSendConfirmationEmail=Send a confirmation email
+OrderSendConfirmationEmailSendTo=Send To
+OrderSendConfirmationEmailCCTo=CC To
+OrderSendConfirmationEmailSubject=Subject 
+OrderSendConfirmationEmailNote=Note
