A lot of clean up of workeffort code. i Some added views to make lists more informative.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5832 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -33,6 +33,7 @@ PageTitleAddWorkEffortRequirement=Add Work Effort Requirement
 PageTitleEditWorkEffortRequirement=Edit Work Effort Requirement
 PageTitleListWorkEffortRequirements=List Work Effort Requirement
 PageTitleWorkEffortRelatedSummary=Work Effort Related Summary
+PageTitleWorkEffortShopLists=Work Effort Shopping Lists
 
 
 PartyAddressLine1=Address Line 1
