Added a few missing labels.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5837 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -41,6 +41,7 @@ OrderCompanySubtitle = Part of the Open For Business Family of Open Source Softw
 OrderCompleted=Completed
 OrderCompleteOrder = Complete Order
 OrderContactInformation = Contact Information
+OrderCopyQuote=Duplicate Quote
 OrderCreateNewReturn = Create new return
 OrderCreateOrder = Create Order
 OrderCreateOrderQuote = Create New Quote
@@ -287,6 +288,7 @@ OrderViewEditDeliveryScheduleInfo = View/Edit Delivery Schedule Info
 OrderViewImage = View Image
 OrderViewOrder = View Order
 OrderViewPermissionError = You do not have permission to view this page.
+OrderViewQuote=View Quote
 OrderWaitingApproval=Waiting Approval
 OrderWaitingCompletion=Waiting Completion
 OrderWaitingPayment=Waiting Payment
