Refactored "createCustRequest" service's permissions to allow the service to be called from ecommerce. Added links in ecommerce to create a request for quote from a cart or from a shopping list.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5849 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/ecommerce/config/EcommerceUiLabels.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels.properties
@@ -265,6 +265,7 @@ EcommerceThankForRegistering=Thank you for registering with
 EcommerceThankYou=Thank you
 EcommerceToAddSelectedItemsToShoppingList=to add selected items to a shopping list
 EcommerceToCart=to Cart
+EcommerceToOrderCreateCustRequestFromCart=to create a request for quote
 EcommerceTotal=Total
 EcommerceTotalPrice=Total Price
 EcommerceUnitPrice=Unit Price
