--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -42,6 +42,8 @@ OrderCompleted=Completed
 OrderCompleteOrder = Complete Order
 OrderContactInformation = Contact Information
 OrderCopyQuote=Duplicate Quote
+OrderCreateCustRequestFromCart=Create a Request For Quote
+OrderCreateCustRequestFromShoppingList=Create a Request For Quote
 OrderCreateNewReturn = Create new return
 OrderCreateOrder = Create Order
 OrderCreateOrderQuote = Create New Quote
@@ -50,6 +52,7 @@ OrderCreateOrderQuoteAttribute = Create New Quote Attribute
 OrderCreateOrderQuoteCoefficient = Create New Quote Coefficient
 OrderCreateOrderQuoteItem = Create New Quote Item
 OrderCreateOrderQuoteRole = Create New Quote Role
+OrderCreateQuoteFromCart=Create New Quote From Cart
 OrderCreateReturn = Create return
 OrderCreatedBy = Created by
 OrderCurrentStatus = Current Status
