A whole bunch of form and screen cleanups; main thing fixed is the use of property-map in the form def files which somehow has spread all over the place and is not the best place to put it, but worse is that none of these (somehow...) had global=true so they were overriding the uiLabelMap values that already existed which messed up a lot of forms; also did a bunch of changes when using the performFind service to use value=EntityName in the entityName field-map instead of having it parameterized which is an older style and is difficult to read and has unnecessary extra line of code; also various formatting and consistency cleanups
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5857 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -211,6 +211,7 @@ WorkEffortThisWeek=This Week
 WorkEffortUpcomingEvents=Upcoming Events
 WorkEffortUsername=Username
 WorkEffortViewTasksEdit=ViewTasks / Edit
+WorkEffortViewPermissionError=You do not have permission to view this screen (WORKEFFORTMGR_VIEW needed)
 WorkEffortWeekView=Week View
 WorkEffortWelcome=Welcome
 WorkEffortWorkEffortId=WorkEffort Id
