Various cleanups including small fixes based on reports from Les
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5861 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -71,6 +71,7 @@ CommonBackToList=Back To List
 CommonBackToOptions=Back to Options
 CommonBenefit=Benefit
 CommonBy=By
+CommonCalendar=Calendar
 CommonCancel=Cancel
 CommonCancelled=Cancelled
 CommonCancelAll=Cancel All
@@ -91,7 +92,7 @@ CommonComment=Comment
 CommonComments=Comments
 CommonCompleted=Completed
 CommonConfiguration=Configuration
-CommonContactMechID=Contact MechI D
+CommonContactMechID=Contact Mech ID
 CommonContactPurpose=Contact Purpose
 CommonContactUs=Contact Us
 CommonContacts=Contacts
@@ -107,6 +108,7 @@ CommonCreateNew=Create New
 CommonCreated=Created
 CommonCreatedBy=Created By
 CommonCredit=Credit
+CommonCurrencyUom=Currency UOM
 CommonCurrent=Current
 CommonDatabaseProblem=Database Problem
 CommonDate=Date
@@ -222,7 +224,7 @@ CommonNoParent=No Parent
 CommonNoTaskAssigned=No tasks currently require your attention.
 CommonNone=None
 CommonNot=Not
-CommonNotModifRecreat=cannot change without re-creating
+CommonNotModifRecreat=Cannot change without re-creating
 CommonNotSet=Not Set
 CommonNotShown=Not Shown
 CommonNotYetImplemented=Not yet implemented
@@ -258,6 +260,7 @@ CommonPublish=Publish
 CommonPurpose=Purpose
 CommonQualifier=Qualifier
 CommonQuantity=Quantity
+CommonQuantityUom=Quantity UOM
 CommonQuarter=Quarter
 CommonQuickAdd=Quick Add
 CommonQuickAddList=Quick Add To Shopping List
