Some general cleanups to no longer use the &lt;br/&gt; hack, but instead use container elements which is cleaner and more multi-platform friendly; also some improvements in the WorkEffort application (not yet finished) to header menu and various forms and labels and such
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5865 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -214,6 +214,7 @@ WorkEffortViewTasksEdit=ViewTasks / Edit
 WorkEffortViewPermissionError=You do not have permission to view this screen (WORKEFFORTMGR_VIEW needed)
 WorkEffortWeekView=Week View
 WorkEffortWelcome=Welcome
+WorkEffortWorkEffort=Work Effort
 WorkEffortWorkEffortId=WorkEffort Id
 WorkEffortWorkEffortIdEmpty=WorkEffort Id is empty
 WorkEffortWorkEffortManagerApplication=WorkEffort Manager Application
