A few fairly random label improvements, found some redundant labels in accounting and I bet these are all over the place... should use the common labels as available rather than duplicate, quite a bit of work to do
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5881 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -108,6 +108,7 @@ CommonCreateNew=Create New
 CommonCreated=Created
 CommonCreatedBy=Created By
 CommonCredit=Credit
+CommonCurrency=Currency
 CommonCurrencyUom=Currency UOM
 CommonCurrent=Current
 CommonDatabaseProblem=Database Problem
