--- a/specialized/opentravelsystem/config/CommonUiLabels.properties
+++ b/specialized/opentravelsystem/config/CommonUiLabels.properties
@@ -113,6 +113,7 @@ CommonCreateNew=Create New
 CommonCreated=Created
 CommonCreatedBy=Created By
 CommonCurrent=Current
+CommonCurrency=Currency
 CommonDate=Date
 CommonDateFilter=Date Filter
 CommonDay=Day
@@ -240,7 +241,6 @@ CommonPrevious=Previous
 CommonPriority=Priority
 CommonProfile=Profile
 CommonQualifier=Qualifier
-CommonQuantity=EventQuantity
 CommonQuantity=Quantity
 CommonQuarter=Quarter
 CommonQuickAdd=Quick Add
@@ -310,8 +310,9 @@ CommonTitle=Title
 CommonTo=To
 CommonToName=To Name
 CommonToday=Today
-CommonTotal=Total   
+CommonTotal=Total
 CommonTuesday=Tuesday
+CommonType=Type
 CommonUnitPrice=Unit Price
 CommonUntil=Until
 CommonUom=UOM
