Added new ViewRequest html report.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5894 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -219,9 +219,13 @@ OrderRejected=Rejected
 OrderRemaining = Remaining
 OrderRemainingSubTotal = Remaining SubTotal
 OrderRequest = Request
+OrderRequestCreatedDate=Created Date
+OrderRequestDate=Request Date
 OrderRequestItems = Request Items
+OrderRequestLastModifiedDate=Last Modified Date
 OrderRequestList = Request List
 OrderRequestManager = Request Manager
+OrderRequestMaximumAmount=Maximum Amount
 OrderRequestName = Request Name
 OrderRequestRoles = Request Roles
 OrderRequestTaker = Request Taker
@@ -292,6 +296,7 @@ OrderViewImage = View Image
 OrderViewOrder = View Order
 OrderViewPermissionError = You do not have permission to view this page.
 OrderViewQuote=View Quote
+OrderViewRequest=View Request
 OrderWaitingApproval=Waiting Approval
 OrderWaitingCompletion=Waiting Completion
 OrderWaitingPayment=Waiting Payment
